--- a/web/index.html
+++ b/web/index.html
@@ -17,7 +17,7 @@
                 type: "GET",
                 dataType: "json",
                 headers: {
-                    Authorization: "Basic " + btoa("myuser:topsecret")
+                    Authorization: "Basic " + btoa("reader:123")
                 },
                 success: function(studiosList){
                     var html = "";
